# mytelkomsel-intelligent-search

./: .gitignore  README.md  nixpacks.toml  package-lock.json  pyproject.toml  start.sh  static.json
backend/: main-ori.py  main.py
backend/api/: fuzzy_search.py  llm_search.py  vector_search.py
backend/data/: products-ver1.json  products.json
backend/scripts/: create_embeddings.py
backend/services/: fuzzy_engine.py
backend/utils/: filters.py
backend/vector_store/f1312845-8af1-4548-b030-4ce3b57d03f9/: index_metadata.pickle
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App copy 2.jsx  App copy.jsx  App.css
