[tool.poetry]
name = "mytelkomsel-intelligent-search"
version = "0.1.0"
description = ""
authors = ["Julitra Anaada <julitra.anaada@gmail.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
rapidfuzz = "^3.13.0"
openai = "^1.98.0"
chromadb = "^1.0.15"
tiktoken = "^0.9.0"
fastapi = "^0.116.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
